working with UI

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -9,3 +9,10 @@ appTitle=Json Binding Activity
 appDescription=An SAP Fiori application.
 #XTIT: Main view title
 title=Json Binding Activity
+
+#XMSG: 
+mailSubject= Test email to
+#XMSG: 
+mailBody= Hi! How are you?
+#XMSG: 
+domain= @accenture.com
